# OPEN_ENV

./: .gitignore  Dockerfile  README.md  app.py  env.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
