[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-openenv"
version = "0.1.0"
description = "Data Cleaning OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7.0",
    "openai>=1.40.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
